--- a/app/templates/workout/workouts.html
+++ b/app/templates/workout/workouts.html
@@ -1,13 +1,10 @@
 <ion-view title="Sessions">
   <ion-nav-buttons side="right">
-    <a ui-sref="workouts.edit">
-      <button class="button">Add</button>
-    </a>
+      <button ng-if="vm.add" ng-click="vm.add()" class="button">Add</button>
   </ion-nav-buttons>
   <ion-content class="has-header">
   <div ng-repeat="workout in vm.workouts">
   	<workout ng-model="workout" on-selection="vm.invitResponse(choice, workout)" ></workout>
   </div>
-
   </ion-content>
 </ion-view>
