--- a/app/templates/workout/workouts.html
+++ b/app/templates/workout/workouts.html
@@ -1,4 +1,4 @@
-<ion-view title="Sessions">
+<ion-view title="{{vm.title}}">
   <ion-nav-buttons side="right">
       <button ng-if="vm.add" ng-click="vm.add()" class="button">Add</button>
   </ion-nav-buttons>
