--- a/app/templates/workout/workout.html
+++ b/app/templates/workout/workout.html
@@ -36,4 +36,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="item no-padding" ng-show="vm.select">
+		<button ng-click="vm.select()" class="button button-full button-small button-calm no-margin">Select</button>
+	</div>
 </div>
