--- a/app/templates/workout/workouts.html
+++ b/app/templates/workout/workouts.html
@@ -3,8 +3,11 @@
       <button ng-if="vm.add" ng-click="vm.add()" class="button">Add</button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-  <div ng-repeat="workout in vm.workouts">
-  	<workout ng-model="workout" on-selection="vm.invitResponse(choice, workout)" ></workout>
-  </div>
+    <span ng-if="vm.partner">
+      <workout ng-repeat="workout in vm.workouts" ng-model="workout" on-selection="vm.select(workout)" ></workout>
+    </span>
+    <span ng-if="!vm.partner">
+      <workout ng-repeat="workout in vm.workouts" ng-model="workout" on-radio-selection="vm.invitResponse(choice, workout)" ></workout>
+    </span>
   </ion-content>
 </ion-view>
