--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -40,8 +40,8 @@
     <div class="bar bar-footer bar-assertive" ng-show="form.password2.$error.compareTo && !form.password2.$pristine">
       <div class="title">Passwords do not match.</div>
     </div>
-    <div class="bar bar-footer bar-assertive" ng-show="error">
-      <div class="title">{{error}}</div>
+    <div class="bar bar-footer bar-assertive" ng-show="vm.error">
+      <div class="title">{{vm.error}}</div>
     </div>
   </form>
 </ion-view>
